--- a/website/index.html
+++ b/website/index.html
@@ -12,8 +12,7 @@
     <label for="zip">Enter the zip Code</label>
     <input id="zip"
            type="text"
-           placeholder="enter zip code here"
-           value="94040,us">
+           placeholder="enter zip code here">
     <textarea id="feelings"
               placeholder="type your response here..."
               rows="9"
